Adding the 42 Header & cleanning some comments

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: jflorido <jflorido@student.42urduliz.co    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/17 19:54:12 by jflorido          #+#    #+#              #
-#   Updated: 2022/10/22 10:34:33 by jflorido         ###   ########.fr       # #
+#    Updated: 2023/06/13 18:59:32 by jflorido         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
